# seminar_2

./: .gitignore  CMakeLists.txt  data.txt  func.c  func.h  main.c  private_funcs.c  private_funcs.h  struct.h  test.c
controller/: c_funcs.c  c_funcs.h  c_private_funcs.c  c_private_funcs.h
model/: struct.h
view/: v_func.c  v_func.h  v_private_func.c  v_private_func.h
